<resources>
    <string name="app_name">TestingAndroid</string>
    <string name="toggleTestOff">Off</string>
    <string name="toggleTestOn">On</string>
    <string name="testToggleButton">Test Toggle Button</string>
    <string name="textView">Your Name Here</string>
    <string name="testTextView">Test Text View</string>
    <string name="hintList">What you submit above, goes here</string>
    <string name="typeName">Type your name here</string>
    <string name="sayHi">Say Hi</string>
    <string name="nextActivity">Next Activity</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="def">Default</string>
    <string name="themes">Select your favorite color:</string>
    <string name="allCaps">ALL CAPS</string>
    <string name="noCaps">no caps</string>
    <string name="typeWords">Type random words</string>
    <string name="testMe">Test me with short and long clicks</string>

    <!--<string-array name="namesArray">
        <item>Daniel</item>
        <item>Juan</item>
        <item>John</item>
        <item>Michael</item>
        <item>Carl</item>
    </string-array>-->
</resources>
